[package]
name = "ptr-bool"
version = "0.1.0"
edition = "2021"
description = "A pointer and boolean with size of a pointer."
license = "MIT"
homepage = "https://github.com/pzipper/ptr-bool"
repository = "https://github.com/pzipper/ptr-bool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
